# shift_daily_tasks_creator

./: .gitignore  makefile  pyproject.toml  settings.ini
STD_creator/: UI_template.ui  __main__.py  collumn_comparison.py  compilators.py  config_crud.py  main.py  stuff.py  ui.py  ui_design.py  xlsx_parsers.py
tests/: test_config_load.py  test_parsers.py  test_stuffer.py
tests/fixtures/: comparison.ini  settings.ini
tests/fixtures/files/: 6031-49728.txt  6031-49809.txt  6048-03702.txt  6048-03703.txt  6054-06418.txt  6060-07085.txt  6060-07087.txt  6072-00947.txt  6080-03055.txt  6210-01364.txt  6262-00633.txt  6262-00643.txt  6262-00644.txt  6312-08972.txt  6312-08976.txt  6312-08977.txt  6312-08981.txt  6312-08999.txt  6312-09000.txt  6312-09004.txt  6312-09005.txt  6312-09007.txt  6312-09008.txt  6312-09009.txt  6312-09030.txt  6317-08121.txt  6317-08122.txt  6317-08144.txt  6321-07754.txt  6321-07774.txt  6337-01248.txt  6350-13902.txt  6350-13918.txt  6354-13986.txt  6354-14039.txt  6360-02031.txt  6360-02032.txt  6364-24462.txt  6364-24463.txt  6364-24468.txt  (+78 more)
